--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 *,
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -697,6 +700,142 @@ a {
 
  }
 }
+
+
+.container-login {
+  position: fixed;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  height: 520px;
+  background-color: #f8f8f8; /* Light gray background */
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  visibility: hidden;
+  z-index: 1000;
+}
+
+.box {
+  background-color: #ffffff;
+  padding: 50px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  width: 100%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="checkbox"] {
+  margin-right: 0.5rem;
+  margin-top: 1.2rem;
+}
+
+label[for="remember-me"] {
+  text-align: left;
+  margin-top: -1.2rem; 
+  margin-bottom: 3.6rem; 
+  margin-left: 2rem;
+}
+
+
+input[type="submit"],
+button[type="submit"] {
+  width: 100%;
+  background-color: #c71100;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover,
+button[type="submit"]:hover {
+  background-color: #aa0e00;
+}
+
+p {
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 1rem;
+  margin-bottom:2.7rem ;
+}
+
+@media only screen and (max-width: 875px){
+  .container-login {
+     flex-direction: column;
+     padding: 20px 10px;
+    }
+
+     
+     .box {
+      padding: 30px 20px;
+    }
+  
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 15px;
+    }
+  
+    label {
+      font-size: 0.8rem;
+      margin-bottom: 10px;
+    }
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+      padding: 10px 15px;
+    }
+  
+    input[type="checkbox"] {
+      margin-right: 0.3rem;
+      margin-top: 1rem;
+    }
+  
+    label[for="remember-me"] {
+      margin-top: -1rem;
+      margin-bottom: 3rem;
+      margin-left: 1.5rem;
+    }
+  
+    input[type="submit"]:hover,
+    button[type="submit"]:hover {
+      background-color: #9a0 }
+  }
 
 
 
