--- a/styles.css
+++ b/styles.css
@@ -435,6 +435,10 @@ a {
   -o-transition: all 0.3s ease-in-out;
 }
 
+.footer-container {
+  width: 100%;
+}
+
 @media (max-width: 1340px) {
   .main {
     padding: 30px 90px;
@@ -566,40 +570,16 @@ a {
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Footer */
-
 
 .element {
   margin-top: 400px;
   height: 530px;
-  background-color:#aa0e0f; /* Ganti dengan warna latar yang diinginkan */
+  background-color: #aa0e0f; /* Ganti dengan warna latar yang diinginkan */
   color: #fff; /* Ganti dengan warna teks yang sesuai */
-} 
+}
 
-.background-image{
+.background-image {
   background-image: url("./images/backgroundFooter.jpg");
   height: 480px;
   padding-top: 20px;
@@ -612,7 +592,7 @@ a {
 
 .judul {
   font-size: 18px;
-  font-weight:600;
+  font-weight: 600;
 }
 
 .garis {
@@ -622,11 +602,9 @@ a {
   margin-top: 15px;
 }
 
-
 .footer-table {
   list-style-type: none;
   margin-top: 28px;
-  
 }
 
 .footer-a {
@@ -647,7 +625,7 @@ a {
   fill: white;
   margin-top: 4px;
   cursor: pointer;
-} 
+}
 
 .copyright {
   color: #ffffff83;
@@ -665,50 +643,30 @@ a {
 
 /* media query */
 
- @media screen and (max-width: 1030px) {
-
- .background-image {
-  padding-left: 20px;
-  gap: 200px;
- }
-}
-@media screen and (max-width: 850px) { 
-
-
-
+@media screen and (max-width: 1030px) {
   .background-image {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  gap: 50px;
- }
-
- .element {
-  height: 100%;
-  width: 100%;
-  position: relative;
- }
- .footer-info {
-  margin-bottom: 60px;
- } 
-
- .copyright {
-  padding-bottom: 10px;
-
- }
+    padding-left: 20px;
+    gap: 200px;
+  }
 }
+@media screen and (max-width: 850px) {
+  .background-image {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 50px;
+  }
 
+  .element {
+    height: 100%;
+    width: 100%;
+    position: relative;
+  }
+  .footer-info {
+    margin-bottom: 60px;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+  .copyright {
+    padding-bottom: 10px;
+  }
+}
